View Issue Details

IDProjectCategoryView StatusLast Update
0021778Open CASCADEOCCT:Modeling Algorithmspublic2012-03-29 17:26
ReporterabvAssigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
OSAll 
Product Version6.4.0 
Target Version6.5.3Fixed in Version6.5.3 
Summary0021778: IGESControl_Writer does not take into account parameter write.iges.brep.mode
DescriptionSic! It uses mode passed as argument, 0 by default. At a minimum, it must use
this parameter in default constructor.
TagsNo tags attached.
Test case numberTest case is not required

Activities

ama

2011-12-08 18:31

developer   ~0018805

SVN branch http://svn/svn/occt/branches/OCC21778 (revision 9695) is ready to be reviewed (modified IGESControl_Writer default constructor in order to use parameter write.iges.brep.mode).

gka

2011-12-12 15:10

developer   ~0018815

Dear Bugmaster.

This bug has been reviewed and it is ready for testing.

Best regards
Galina.

mkv

2011-12-14 20:38

tester   ~0018856

Dear BugMaster,
Workbench KAS:dev:mkv-21778-occt was created from SVN branch http://svn/svn/occt/branches/21778
(and mkv-21778-products from trunk) and compiled on Linux platform.

There are not regressions in mkv-21778-products regarding to KAS:dev:products-652-opt.

See results in /QADisk/occttests/results/KAS/dev/mkv-21778-products_13122011/lin
See reference results in /QADisk/occttests/results/KAS/dev/products-652-opt_23092011/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

bugmaster

2012-01-14 10:59

administrator   ~0019130

Integration into trunk of occt repository

ate: 2012-01-14 10:42:36 +0400 (Sat, 14 Jan 2012)
New Revision: 10044

Modified:
   trunk/src/IGESControl/IGESControl_Writer.cxx
Log:

Related Changesets

occt: master 06f3d6bc

2012-01-14 06:42:36

ama


Committer: bugmaster Details Diff
0021778: IGESControl_Writer does not take into account parameter write.iges.brep.mode Affected Issues
0021778
mod - src/IGESControl/IGESControl_Writer.cxx Diff File

Issue History

Date Modified Username Field Change
2010-06-29 13:51 bugmaster Assigned To bugmaster => abv
2010-06-29 13:51 bugmaster Status new => assigned
2011-08-02 11:31 bugmaster Category OCCT:MOA => OCCT:Modeling Algorithms
2011-12-01 13:51 abv Assigned To abv => ama
2011-12-08 18:31 ama Note Added: 0018805
2011-12-08 18:31 ama Assigned To ama => gka
2011-12-08 18:41 abv Status assigned => resolved
2011-12-12 15:10 gka Note Added: 0018815
2011-12-12 15:10 gka Status resolved => reviewed
2011-12-14 20:38 mkv Note Added: 0018856
2011-12-23 10:44 abv Product Version => 6.4.0
2011-12-23 10:44 abv Fixed in Version EMPTY =>
2011-12-23 10:44 abv Target Version => 6.5.3
2011-12-23 10:44 abv Description Updated
2012-01-13 18:08 mkv Status reviewed => tested
2012-01-14 10:59 bugmaster Note Added: 0019130
2012-01-14 10:59 bugmaster Status tested => verified
2012-01-14 10:59 bugmaster Resolution open => fixed
2012-01-31 14:55 apn Test case number => Test case is not required
2012-03-29 17:26 bugmaster Changeset attached => occt master 06f3d6bc