0021778: IGESControl_Writer does not take into account parameter write.iges.brep.mode